--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <section class="about-us">
                 <h1>Мастер-классы от Create Studio</h1>
 
-                <button type="submit" class="btn">Записаться</button>
+                <button type="submit" class="btn open-modal">Записаться</button>
             </section>
 
         </main>
     </div>
-
+    <script src="./base.js"></script>
+    <script src="./modal.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
